--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.0",
@@ -26,9 +27,11 @@
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-hot-toast": "^2.4.1",
     "react-medium-image-zoom": "^5.1.8",
     "react-phone-number-input": "^3.3.4",
     "react-toastify": "^9.1.3",
+    "resend": "^3.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
